# apps/portal-angular/src/app/core/models/index.ts
@@ -1,5 +1,6 @@
 export * from './api-error.model';
 export * from './appointment.model';
+export * from './patient-profile.model';
 export * from './provider.model';
 export * from './slot.model';
 export * from './visit-type.model';
